# Oracle4Grid

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  scratch_6.py  setup.py
.github/workflows/: python-publish.yml
Notebooks/: Analyse_Policy_Oracle-Scenario_3.ipynb  Create_Unitary_Actions_Viz.ipynb  Prepare_for_Oracle.ipynb  r2_to_118.json  states_table.csv  sub_elems.py  unitary_actions.json
Notebooks/lrpn_2019_unitary_actions/: unitary_actions_viz.ipynb
Notebooks/wcci_test_unitary_actions/: Agregated_Unitary_Actions.ipynb  unitary_actions_april_42.ipynb  unitary_actions_december_12.ipynb  unitary_actions_february_40.ipynb  unitary_actions_january_28.ipynb  unitary_actions_june_01.ipynb  unitary_actions_march_07.ipynb  unitary_actions_may_17.ipynb  unitary_actions_november_34.ipynb  unitary_actions_october_21.ipynb
docs/: ATTACKS.rst  DESCRIPTION.rst  GETTING_STARTED.rst  INSTALL.rst  README.rst  index.rst
oracle4grid/: main.py
oracle4grid/core/: oracle.py
oracle4grid/ressources/: config.ini
oracle4grid/test/: Test_Agent_Replay_save_reload.py  graph_validity_test.py  integration_test.py  performance_test.py  reward_df.csv
oracle4grid/test_resourses/: config.ini  expected_2actions_winner_format2.json  expected_actions_format1.json  expected_actions_format2.json  oracle_action_path_neurips.csv  test_2actions_winner_format2.json  test_actions_format2.json  test_kpi.csv  test_reward.csv  test_unitary_actions_cancelling.json  test_unitary_actions_cancelling_sub1.json  test_unitary_actions_final_topo.json  (+1 more)
(+95 files in other folders)
