[tool.poetry]
name = "oracle4grid"
version = "1.0.3"
description = "Oracle agent that finds the best course of actions aposteriori, within a given perimeter of actions"
authors = ["Mario Jothy <mariojothy@gmail.com>", "Nicolas Megel <nico.megel@gmail.com>"]
license = "Mozilla Public License 2.0 (MPL 2.0)"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numba = "^0.53.1"
Grid2Op = "^1.5.2"
pandas = "^1.2.4"
psutil = "^5.8.0"
matplotlib = "^3.4.2"
networkx = "^2.5.1"
numpy = "1.19.3"
pytest = "^6.2.4"
pybind11 = "^2.5.0"
ipykernel = "^5.5.4"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oracle4grid = 'oracle4grid.main:main'